--- a/prot.html
+++ b/prot.html
@@ -14,13 +14,13 @@
         <div class="photo">
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a class="hom" href="#home">Home</a></li>
                     <li><a href="#news">About</a></li>
                     <li><a href="#contact">Services</a></li>
                     <li><a href="#about">Contact</a></li>
                   </ul>
-            
                 </nav>
+                <h1 class="pro">Welcome To My Protfolio</h1>
         </div>
     </section>
 </body>
