--- a/prot.html
+++ b/prot.html
@@ -22,6 +22,10 @@
                 </nav>
                 <h1 class="pro">Welcome To My Protfolio</h1>
         </div>
+        <div class="newp">
+            <p class="par">I am a Software Engineering Student</p>
+            <p class="parr">Sunita Adhikari</p>
+        </div>
     </section>
 </body>
 </html>
