--- a/prot.html
+++ b/prot.html
@@ -25,6 +25,7 @@
         <div class="newp">
             <p class="par">I am a Software Engineering Student</p>
             <p class="parr">Sunita Adhikari</p>
+            <p>At present I am Studying at Pokhara University. </p>
         </div>
     </section>
 </body>
