--- a/prot.html
+++ b/prot.html
@@ -25,7 +25,9 @@
         <div class="newp">
             <p class="par">I am a Software Engineering Student</p>
             <p class="parr">Sunita Adhikari</p>
-            <p>At present I am Studying at Pokhara University. </p>
+            <p>At present I am Studying at Pokhara University.
+                <br>
+             </p>
         </div>
     </section>
 </body>
