--- a/prot.html
+++ b/prot.html
@@ -11,22 +11,25 @@
 </head>
 <body>
     <section>
-        <div class="photo">
+        <img src="lak.jpg" class="photo" >
             <nav>
                 <ul>
-                    <li><a class="hom" href="#home">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#news">About</a></li>
                     <li><a href="#contact">Services</a></li>
                     <li><a href="#about">Contact</a></li>
                   </ul>
                 </nav>
                 <h1 class="pro">Welcome To My Protfolio</h1>
-        </div>
+            </img>
         <div class="newp">
             <p class="par">I am a Software Engineering Student</p>
             <p class="parr">Sunita Adhikari</p>
-            <p>At present I am Studying at Pokhara University.
+            <p class="">At present I am Studying at Pokhara University.<br>
+                I was born in Lamjung, Besishahar.
                 <br>
+               <br>
+                I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night;
              </p>
         </div>
     </section>
