--- a/prot.html
+++ b/prot.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section>
-        <img src="lak.jpg" class="photo" >
+        <img class="photo" >
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -25,8 +25,8 @@
         <div class="newp">
             <p class="par">I am a Software Engineering Student</p>
             <p class="parr">Sunita Adhikari</p>
-            <p class="">At present I am Studying at Pokhara University.<br>
-                I was born in Lamjung, Besishahar.
+            <p class="desc">At present I am Studying at Pokhara University.<br>
+                I was born in Lamjung, Besishahar.But temporarily I am living at Pokhara.
                 <br>
                <br>
                 I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night;
