--- a/prot.html
+++ b/prot.html
@@ -26,10 +26,10 @@
             <p class="par">I am a Software Engineering Student</p>
             <p class="parr">Sunita Adhikari</p>
             <p class="desc">At present I am Studying at Pokhara University.<br>
-                I was born in Lamjung, Besishahar.But temporarily I am living at Pokhara.
+                I was born in Lamjung,Besishahar.  But temporarily I am living at Pokhara.
                 <br>
                <br>
-                I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night;
+                I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night;
              </p>
         </div>
     </section>
