--- a/prot.html
+++ b/prot.html
@@ -32,8 +32,9 @@
                 I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night.
                 <br>
                 <br>
-                Talking about my hobby is that i love to sing, make new variety of foods. I like to laugh too.
+                Talking about my hobby is that i love music and love to sing which gives me a relief from every aspect also i love make new variety of foods. I like to laugh too.
              </p>
+             <img class="circle" src="marr.jpg">
         </div>
     </section>
 </body>
