--- a/prot.html
+++ b/prot.html
@@ -39,6 +39,11 @@
         <div class="sermain">
         <img src="serbac.webp" class="service">
             <h1 class="hser">Services</h1>
+            <div class="flex-container">
+                <div class="box">box 1</div>
+                <div class="box">Box 2</div>
+                <div class="box">Box 3</div>
+              </div>
         </div>
     </section>
 </body>
