--- a/prot.html
+++ b/prot.html
@@ -37,14 +37,15 @@
              </p>
         </div>
         <div class="sermain">
-        <img src="serbac.webp" class="service">
             <h1 class="hser">Services</h1>
             <div class="flex-container">
-                <div class="box">box 1</div>
+                <div class="box">box 1
+                    <img src="serflex.jpg">
+                </div>
                 <div class="box">Box 2</div>
                 <div class="box">Box 3</div>
               </div>
-        </div>
+        
     </section>
 </body>
 </html>
