--- a/prot.html
+++ b/prot.html
@@ -38,9 +38,9 @@
         </div>
         <div class="sermain">
             <h1 class="hser">Services</h1>
-            <div class="flex-container">
+            <div class="flex">
                 <div class="box">box 1
-                    <img src="serflex.jpg">
+                    <img class="boxi" src="serflex.jpg">
                 </div>
                 <div class="box">Box 2</div>
                 <div class="box">Box 3</div>
