--- a/prot.html
+++ b/prot.html
@@ -39,7 +39,7 @@
         <div class="sermain">
             <h1 class="hser">Services</h1>
             <div class="flex">
-                <div class="box">box 1
+                <div class="box">
                     <img class="boxi" src="serflex.jpg">
                 </div>
                 <div class="box">Box 2</div>
