--- a/prot.html
+++ b/prot.html
@@ -21,7 +21,7 @@
                   </ul>
                 </nav>
                 <h1 class="pro">Welcome To My Protfolio</h1>
-            </img>
+           
         <div class="newp">
             <p class="par">I am a Software Engineering Student</p>
             <img class="circle" src="marr.jpg">
@@ -38,10 +38,10 @@
         </div>
         <div class="sermain">
             <h1 class="hser">Services</h1>
-            <div class="flex">
-                <div class="box">
-                    <img class="boxi" src="serflex.jpg">
-                </div>
+                <div class="flex-container">
+                    <div class="box">
+                      <img class="imgs" src="serflex.jpg">
+                    </div>
                 <div class="box">Box 2</div>
                 <div class="box">Box 3</div>
               </div>
