--- a/prot.html
+++ b/prot.html
@@ -45,6 +45,10 @@
                 <div class="box">Box 2</div>
                 <div class="box">Box 3</div>
               </div>
+        <div class="mainform">
+            <form></form>
+        </div>
+
         
     </section>
 </body>
