--- a/prot.html
+++ b/prot.html
@@ -45,7 +45,9 @@
                 <div class="box">Box 2</div>
                 <div class="box">Box 3</div>
               </div>
+              </div>
         <div class="mainform">
+            <h1 class="hcont">Contact</h1>
             <form></form>
         </div>
 
