--- a/prot.html
+++ b/prot.html
@@ -36,8 +36,8 @@
                 Talking about my hobby is that i love music and love to sing which gives me a relief from every aspect also i love make new variety of foods. I like to laugh too.
              </p>
         </div>
-        <div class="sermain">
-            <h1 class="hser">Services</h1>
+        <!-- <div class="sermain"> -->
+            <!-- <h1 class="hser">Services</h1>
                 <div class="flex-container">
                     <div class="box">
                       <img class="imgs" src="serflex.jpg">
@@ -45,7 +45,7 @@
                 <div class="box">Box 2</div>
                 <div class="box">Box 3</div>
               </div>
-              </div>
+              </div> -->
         <div class="mainform">
             <h1 class="hcont">Contact</h1>
             <form class="formm">
@@ -57,7 +57,7 @@
                <input type="email" id="emaiil" name="email"><br>
                <label class="fphonee" for="phone">Phone*</label>
                <input type="tel" id="phonee" name="phone" >
-               <label class="ftextt" for="text"> Tell Us About Your Experience:</label>
+               <label class="ftextt" for="text"> Message:</label>
                <textarea rows="4" cols="50" name="comment" form="usrform" id="textare"></textarea>
                <input class="submitt" type="submit" value="Submit">
             </form>
