--- a/prot.html
+++ b/prot.html
@@ -68,11 +68,17 @@
                 <div class="photo-box">
                     <img class="pn" src="s1.png">
                 </div>
-                <div class="photo-box">Photo 2</div>
-                <div class="photo-box">Photo 3</div>
-                <div class="photo-box">Photo 4</div>
-                <div class="photo-box">Photo 5</div>
-                <div class="photo-box">Photo 6</div>
+                <div class="photo-box">
+                    <img class="pn" src="s2.png">
+                </div>
+                <div class="photo-box">
+                    <img class="pn" src="s3.png"></div>
+                <div class="photo-box">
+                    <img class="pn" src="s4.png"></div>
+                <div class="photo-box">
+                    <img class="pn" src="s5.png"></div>
+                <div class="photo-box">
+                    <img class="pn" src="s6.png"></div>
               </div>
         </div>
     </section>
