--- a/prot.html
+++ b/prot.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="prot.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<script src="prot.js"></script></script>
 </head>
 <body>
     <section>
@@ -36,32 +37,7 @@
                 Talking about my hobby is that i love music and love to sing which gives me a relief from every aspect also i love make new variety of foods. I like to laugh too.
              </p>
         </div>
-        <!-- <div class="sermain"> -->
-            <!-- <h1 class="hser">Services</h1>
-                <div class="flex-container">
-                    <div class="box">
-                      <img class="imgs" src="serflex.jpg">
-                    </div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-              </div>
-              </div> -->
-        <div class="mainform">
-            <h1 class="hcont">Contact</h1>
-            <form class="formm">
-                <h1 class="work-form">Join With Me</h1>
-                <p class="workfp">"*" indicates required fields</p>
-                <label class="fnamee" for="fname" > Name*</label>
-                <input type="text" id="fname" name="name"><br>
-                <label class="femaill" for="email">Enter your Email*</label>
-               <input type="email" id="emaiil" name="email"><br>
-               <label class="fphonee" for="phone">Phone*</label>
-               <input type="tel" id="phonee" name="phone" >
-               <label class="ftextt" for="text"> Message:</label>
-               <textarea rows="4" cols="50" name="comment" form="usrform" id="textare"></textarea>
-               <input class="submitt" type="submit" value="Submit">
-            </form>
-        </div>
+       
         <div class="involvepro"> 
             <p class="projp">I have been involve in various Project. Some of them are: </p>
             <div class="container">
@@ -80,6 +56,22 @@
                 <div class="photo-box">
                     <img class="pn" src="s6.png"></div>
               </div>
+        </div>
+        <div class="mainform">
+            <h1 class="hcont">Contact</h1>
+            <form class="formm">
+                <h1 class="work-form">Join With Me</h1>
+                <p class="workfp">"*" indicates required fields</p>
+                <label class="fnamee" for="fname" > Name*</label>
+                <input type="text" id="fname" name="name"><br>
+                <label class="femaill" for="email">Enter your Email*</label>
+               <input type="email" id="emaiil" name="email"><br>
+               <label class="fphonee" for="phone">Phone*</label>
+               <input type="tel" id="phonee" name="phone" >
+               <label class="ftextt" for="text"> Message:</label>
+               <textarea rows="4" cols="50" name="comment" form="usrform" id="textare"></textarea>
+               <input class="submitt" type="submit" value="Submit">
+            </form>
         </div>
     </section>
 </body>
