--- a/prot.html
+++ b/prot.html
@@ -16,14 +16,14 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#news">About</a></li>
-                    <li><a href="#contact">Services</a></li>
-                    <li><a href="#about">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#servicehai">Services</a></li>
+                    <li><a href="#Contactushai">Contact</a></li>
                   </ul>
                 </nav>
                 <h1 class="pro">Welcome To My Protfolio</h1>
            
-        <div class="newp">
+        <div class="newp "id="about">
             <p class="par">I am a Software Engineering Student</p>
             <img class="circle" src="marr.jpg">
             <p class="parr">Sunita Adhikari</p>
@@ -38,7 +38,7 @@
              </p>
         </div>
        
-        <div class="involvepro"> 
+        <div class="involvepro" id="servicehai"> 
             <p class="projp">I have been involve in various Project. Some of them are: </p>
             <div class="container">
                 <div class="photo-box">
@@ -57,7 +57,7 @@
                     <img class="pn" src="s6.png"></div>
               </div>
         </div>
-        <div class="mainform">
+        <div class="mainform "id="Contactushai">
             <h1 class="hcont">Contact</h1>
             <form class="formm">
                 <h1 class="work-form">Join With Me</h1>
