--- a/prot.html
+++ b/prot.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <section>
-        <img class="photo" >
+        <img class="photo" id="home" >
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#servicehai">Services</a></li>
+                    <li><a href="#workfor">Work</a></li>
                     <li><a href="#Contactushai">Contact</a></li>
                   </ul>
                 </nav>
@@ -38,7 +38,7 @@
              </p>
         </div>
        
-        <div class="involvepro" id="servicehai"> 
+        <div class="involvepro" id="workfor"> 
             <p class="projp">I have been involve in various Project. Some of them are: </p>
             <div class="container">
                 <div class="photo-box">
