--- a/prot.html
+++ b/prot.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="prot.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <script src="prot.js"></script></script>
 </head>
@@ -73,6 +74,26 @@
                <input class="submitt" type="submit" value="Submit">
             </form>
         </div>
+        <footer>
+            <div class="containerr">
+              <p class="copyright">Copyright ©2022 My Portfolio</p>
+              <a href="https://www.facebook.com/kanchi.adhikary" class="facebook">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a href="https://www.instagram.com/sunita.adhikary/" class="instagram">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="gmail">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a href="https://github.com/sunitadhikari" class="github">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/sunita-adhikari-888981218/" class="linkedin">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </div>
+          </footer>
     </section>
 </body>
 </html>
