--- a/prot.html
+++ b/prot.html
@@ -78,19 +78,19 @@
             <div class="containerr">
               <p class="copyright">Copyright ©2022 My Portfolio</p>
               <a href="https://www.facebook.com/kanchi.adhikary" class="facebook">
-                <i class="fa-brands fa-facebook"></i>
+                <i class="fab fa-facebook"></i>
               </a>
               <a href="https://www.instagram.com/sunita.adhikary/" class="instagram">
                 <i class="fab fa-instagram"></i>
               </a>
               <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="gmail">
-                <i class="fa-brands fa-facebook"></i>
+                <i class="fas fa-envelope"></i>
               </a>
               <a href="https://github.com/sunitadhikari" class="github">
-                <i class="fa-brands fa-facebook"></i>
+                <i class="fab fa-github"></i>
               </a>
               <a href="https://www.linkedin.com/in/sunita-adhikari-888981218/" class="linkedin">
-                <i class="fa-brands fa-facebook"></i>
+                <i class="fab fa-linkedin"></i>
               </a>
             </div>
           </footer>
