--- a/prot.html
+++ b/prot.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <section>
+        <div>
         <img class="photo" id="home" >
             <nav>
                 <ul>
@@ -23,8 +24,8 @@
                   </ul>
                 </nav>
                 <h1 class="pro">Welcome To My Protfolio</h1>
-           
-        <div class="newp "id="about">
+            </div>
+           <div class="newp "id="about">
             <p class="par">I am a Software Engineering Student</p>
             <img class="circle" src="marr.jpg">
             <p class="parr">Sunita Adhikari</p>
